objects/CSS_List_Of_Values__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To Maintain picklist values along with codes.</description>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values_1__c</fullName>
        <label>Picklist Values 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values_2__c</fullName>
        <label>Picklist Values 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values_3__c</fullName>
        <label>Picklist Values 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>To store the picklist type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSS List Of Values</label>
    <listViews>
        <fullName>CMI_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Picklist_Values_1__c</columns>
        <columns>Picklist_Values_2__c</columns>
        <columns>Picklist_Values_3__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>CMI View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>